Invite popup- friends list need spacing (bug 3550)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/DashLib.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/DashLib.less
@@ -1044,7 +1044,6 @@
     }
     .svg-privateBox {
         fill: rgba(3, 113, 200,.5);
-        stroke: rgba(3, 113, 200,.5);
     }
 }
 
@@ -1410,8 +1409,8 @@
         top:0;bottom:0;
         margin: auto;
         opacity: .6;
-        width: 60%;
-        max-height: 70%;
+        width: 58%;
+        max-height: 62%;
     }
 }
 .notify {
