--- a/Zbang.Cloudents.Mvc4WebRole/Content/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/General.less
@@ -17,6 +17,7 @@ body {
     }
     .mCS-dir-rtl > .mCSB_inside > .mCSB_container {
         /*margin: 0; //override default jQuery mCustom Scrollbar code*/
+        margin: 0 15px 0 0; //see bug 3550
     }
 }
 em{
@@ -1802,10 +1803,7 @@ aside.sideBar {
         background: #00bfa5;
     } 
     svg& {
-        //fill: rgba(0, 191, 165, .6);
-        //stroke: rgba(0, 191, 165, .6);
         fill: #00bfa5;
-        stroke: #00bfa5;
     }
 }
 .color2 {
@@ -1813,10 +1811,7 @@ aside.sideBar {
         background: #f06292;
     } 
     svg& {
-        //fill: rgba(240, 98, 146, .6);
-        //stroke: rgba(240, 98, 146, .6);
         fill: #f06292;
-        stroke: #f06292;
     } 
 }
 .color3 {
@@ -1824,10 +1819,7 @@ aside.sideBar {
         background: #b388ff;
     } 
     svg& {
-        //fill: rgba(179, 136, 255, .6);
-        //stroke: rgba(179, 136, 255, .6);
         fill: #b388ff;
-        stroke: #b388ff;
     }
 }
 .color4 {
@@ -1835,10 +1827,7 @@ aside.sideBar {
         background: #ff6e40;
     } 
     svg& {
-        //fill: rgba(255, 110, 64, .6);
-        //stroke: rgba(255, 110, 64, .6);
         fill: #ff6e40;
-        stroke: #ff6e40;
     }
 }
 .color5 {
@@ -1846,10 +1835,7 @@ aside.sideBar {
         background: #e06055;
     } 
     svg& {
-        //fill: rgba(224, 96, 85, .6);
-        //stroke: rgba(224, 96, 85, .6);
         fill: #e06055;
-        stroke: #e06055;
     } 
 }
 .color6 {
@@ -1857,10 +1843,7 @@ aside.sideBar {
         background: #8e8e8e;
     } 
     svg& {
-        //fill: rgba(142, 142, 142, .6);
-        //stroke: rgba(142, 142, 142, .6);
         fill: #8e8e8e;
-        stroke: #8e8e8e;
     }
 }
 .color7 {
@@ -1868,10 +1851,7 @@ aside.sideBar {
         background: #f9a825;
     }
     svg& {
-        //fill: rgba(249, 168, 37, .6);
-        //stroke: rgba(249, 168, 37, .6);
         fill: #f9a825;
-        stroke: #f9a825;
     }  
 }
 .color8 {
@@ -1879,10 +1859,7 @@ aside.sideBar {
         background: #00c853;
     }
     svg& {
-        //fill: rgba(0, 200, 83, .6);
-        //stroke: rgba(0, 200, 83, .6);
         fill: #00c853;
-        stroke: #00c853;
     }     
 }
 .userLetter {
