--- a/Zbang.Cloudents.Mvc4WebRole/Content/SVG.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/SVG.rtl.css
@@ -153,6 +153,9 @@ svg.rtl {
   width: 75%;
   bottom: 7%;
 }
+.svg-icon6.svg-icon6 {
+  width: 50%;
+}
 .svg-icon10.svg-icon10 {
   width: 80%;
   top: 3%;
